# chronos

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  alembic.ini  app.py  build  build.sh  chronos.py  fly.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml  prebuild.sh
.github/: FUNDING.yml
.github/workflows/: ci.yaml  reset-demo.yaml
alembic/: env.py
alembic/versions/: 4e99af2a12a7_added_created_date_field_to_script_model.py  b904f6b4fd95_initial_database.py  da4a08d36859_added_created_date_field_to_script_.py
chronos/: _version.py  bus.py  config.py  database.py  event.py  execute.py  metadata.py  migrations.py  runtime.py  script.py  settings.py  task.py  telemetry.py  trigger.py  util.py  venv.py  web.py
chronos-ui/: README.md  index.html  package.json  vue.config.js
chronos-ui/public/: index.html
chronos-ui/src/: App.vue  api.js  events.js  i18n.js  main.js  prism.js
chronos-ui/src/components/: ActionOutput.vue  BottomBar.vue  ConfirmModal.vue  HelloWorld.vue  Log.vue  Logs.vue  Navbar.vue  Navigation.vue  Script.vue  (+7 more)
chronos/tasks/: create_default_settings.py  create_script.py  delete_script.py  execute_script.py  install_pip_requirements.py  prune_logs.py  trigger_on_startup.py
migrations/: 001_initialize.py  002_add_cron.py  003_add_boolean_interval_cron.py  004_add_error_to_log.py  005_tasks_table.py  006_add_triggers_to_script.py
web/: brunch-config.js  build.sh  index.html  package-lock.json  package.json
web/public/: app.css  app.css.map  index.html
(+19 files in other folders)
