[tool.poetry]
name = "chronos"
version = "0.1.0"
description = "A tool for running Python scripts periodically"

license = "MIT"

authors = [
    "Simon Sorensen <hello@simse.io>"
]

readme = 'README.md'

repository = "https://github.com/simse/chronos"
homepage = "https://github.com/simse/chronos"

keywords = ['app', 'scripts']

[tool.poetry.dependencies]
python = "^3.7 || ^3.10"  # Compatible python versions must be declared here
flask = "2.0.2"
flask_restful = "0.3.9"
flask_cors = "3.0.10"
werkzeug = "2.0.2"
loguru = "0.5.3"
maya = "0.6.1"
twisted = "21.7.0"
autobahn = "^21.3.1"
cronex = "^0.1.3"
SQLAlchemy = "^1.4.27"
alembic = "^1.7.5"
